# infinito-nexus-core

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  SECURITY.md  SUPPORT.md  compose.yml  pyproject.toml  skills-lock.json
.claude/: settings.json
.github/PULL_REQUEST_TEMPLATE/: server.md
.github/workflows/: delete-branch.yml  entry-push-latest.yml
docs/administration/: README.md  deploy.md  installation.md
docs/contributing/: documentation.md
docs/requirements/: 002-service-registry-refactoring.md  003-reduce-applications-and-users-to-lookup.md  004-generic-rbac-ldap-auto-provisioning.md
docs/security/: administrator.md
group_vars/all/: 04_webserver.yml  05_paths.yml  06_daemons.yml  07_schedule.yml  08_networks.yml  09_ports.yml  10_domains.yml  11_oidc.yml  12_ldap.yml  14_about.yml  15_storage.yml  16_ai.yml  17_resource.yml  README.md  TODO.md
inventories/: dev.yml
packaging/arch/: PKGBUILD
packaging/debian/: changelog
packaging/fedora/: infinito-nexus.spec
plugins/filter/: active_docker.py  canonical_domains_map.py  csp_filters.py  domain_redirect_mappings.py  native_metrics_target.py  node_autosize.py
plugins/lookup/: active_alertmanager_channels.py  application_gid.py  applications.py  applications_current_play.py  cert.py  compose_file_args.py  config.py  database.py  domain.py  domains.py  email.py  native_metrics_apps.py  nginx.py  oidc_flavor.py  prometheus_integration_active.py  service.py  service_registry.py  tls.py  users.py
roles/sys-token-store/: README.md
scripts/: setup.sh
utils/: runtime_data.py  templating.py
(+597 files in other folders)
