[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infinito-nexus"
version = "5.2.0"
description = "Infinito.Nexus"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE.md" }

dependencies = [
  "numpy",
  "ansible",
  "colorscheme-generator @ https://github.com/kevinveenbirkenbach/colorscheme-generator/archive/refs/tags/v0.3.0.zip",
  "bcrypt",
  "ruamel.yaml",
  "PyYAML",
  "tld",
  "passlib",
  "requests",
  "humanfriendly",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "pre-commit",
]

[project.scripts]
infinito = "cli.__main__:main"

[tool.setuptools]
packages = { find = { where = ["."], include = [
  "cli*",
  "plugins*",
  "utils*",
  "library*",
], exclude = [
  "roles*",
  "assets*",
  "docs*",
  "templates*",
  "logs*",
  "tasks*",
  "tests*",
  "__pycache__*",
] } }
include-package-data = true

[tool.ruff]
respect-gitignore = true
exclude = [
  "build",
  "dist",
  "*.egg-info",
  ".venv",
  "venv",
]
